[tool.poetry]
name = "contexto"
version = "0.1.0"
description = ""
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.2.0"
scikit-learn = "^1.1.3"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
